--- a/quart5.css
+++ b/quart5.css
@@ -4,11 +4,52 @@ body {
 
 h1 {
 	text-align: center;
-	color: gold;
+	color: silver;
+	font-size: 80px;
 }
 
 .botoes{
 	text-align: center;
+}
+
+#botao_1 {
+	font-size: 60px;
+	color: red;
+	background-color: black;
+	border-color: grey;
+	border-radius: 15%;
+	width: 400px;
+	height: 100px;
+}
+
+#botao_2 {
+	font-size: 60px;
+	color: blue;
+	background-color: black;
+	border-color: grey;
+	border-radius: 15%;
+	width: 400px;
+	height: 100px;
+}
+
+#botao_3 {
+	font-size: 60px;
+	color: green;
+	background-color: black;
+	border-color: grey;
+	border-radius: 15%;
+	width: 400px;
+	height: 100px;
+}
+
+#botao_4 {
+	font-size: 60px;
+	color: yellow;
+	background-color: black;
+	border-color: grey;
+	border-radius: 15%;
+	width: 400px;
+	height: 100px;
 }
 
 .tela {
@@ -31,14 +72,14 @@ h1 {
 	background: black;
 }
 
-#conteudo-left{
+#conteudo-left {
 	font-size: 28px;
 	width: 10px;
 	height: 1400px;
 	float: left;
 }
 
-#conteudo-right{
+#conteudo-right {
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
@@ -47,7 +88,7 @@ h1 {
 	float: right;
 }
 
-#footer{
+#footer {
 	font-size: 28px;
 	width: 2000px;
 	height: 30px;
@@ -57,7 +98,7 @@ h1 {
 }
 
 .eixoy{
-	color: white;
+	color: grey;
 	float: right;
 	font-size: 28px;
 	width: 10px;
@@ -68,7 +109,7 @@ h1 {
 }
 
 .eixox{
-	color: white;
+	color: grey;
 	font-size: 28px;
 	width: 2030px;
 	height: 290px;
