--- a/quart5.css
+++ b/quart5.css
@@ -1276,3 +1276,12 @@ transition: 0.2s;
 opacity: 0.3;
 transition: 0.2s;
 }
+
+.tabela {
+	border-width: 15px;
+	background-color: silver;
+	font-size: 80px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
